--- a/assets/scss/vars.scss
+++ b/assets/scss/vars.scss
@@ -37,4 +37,7 @@ $default-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin-bottom: 1.25em;
   background: $color;
   border: 1px solid darken($color, 15%);
+  & :last-child {
+    margin-bottom: 0;
+  }
 }
